--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,18 @@
             "TomasVotruba\\SherlockTypes\\": "src"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "TomasVotruba\\SherlockTypes\\Tests\\": "tests"
+        }
+    },
     "require-dev": {
-        "tomasvotruba/class-leak": "^0.1.3",
-        "tomasvotruba/unused-public": "0.3.2.72",
         "phpstan/extension-installer": "^1.3",
-        "symplify/easy-coding-standard": "^12.0"
+        "phpunit/phpunit": "^10.3",
+        "symplify/easy-coding-standard": "^12.0",
+        "symplify/phpstan-extensions": "^11.3",
+        "tomasvotruba/class-leak": "^0.1.3",
+        "tomasvotruba/unused-public": "0.3.2.72"
     },
     "config": {
         "sort-packages": true,
