--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "require-dev": {
         "phpstan/extension-installer": "^1.3",
         "phpunit/phpunit": "^10.3",
+        "rector/rector": "^0.18.0",
         "symplify/easy-coding-standard": "^12.0",
         "symplify/phpstan-extensions": "^11.3",
         "tomasvotruba/class-leak": "^0.1.3",
