--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         }
     },
     "require-dev": {
+        "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpstan/extension-installer": "^1.3",
         "phpunit/phpunit": "^10.3",
         "rector/rector": "^0.18.0",
