--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
     "require": {
         "php": "^8.1",
         "illuminate/container": "^10.20",
+        "nette/utils": "^4.0",
+        "nikic/php-parser": "^4.17",
         "phpstan/phpstan": "^1.10",
         "symfony/console": "^6.3",
-        "nette/utils": "^4.0",
-        "nikic/php-parser": "^4.17"
+        "webmozart/assert": "^1.11"
     },
     "autoload": {
         "psr-4": {
