--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,3 +7,6 @@ parameters:
 
     ignoreErrors:
         - '#Class TomasVotruba\\SherlockTypes\\PHPStan\\Collectors\\(.*?) implements generic interface PHPStan\\Collectors\\Collector but does not specify its types\: TNodeType, TValue#'
+
+    excludePaths:
+        - "*/Fixture/*"
