--- a/.github/workflows/code_analysis.yaml
+++ b/.github/workflows/code_analysis.yaml
@@ -34,7 +34,7 @@ jobs:
 
                     -
                         name: 'PHP Linter'
-                        run: vendor/bin/parallel-lint app tests
+                        run: vendor/bin/parallel-lint src tests
 
                     -
                         name: 'Check Active Classes'
