--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         "php": "^8.1",
         "illuminate/container": "^10.20",
         "nette/utils": "^4.0",
-        "nikic/php-parser": "^4.17",
         "phpstan/phpstan": "^1.10",
         "symfony/console": "^6.3",
         "webmozart/assert": "^1.11"
@@ -21,8 +20,8 @@
         "rector/rector": "^0.18.0",
         "symplify/easy-coding-standard": "^12.0",
         "symplify/phpstan-extensions": "^11.3",
-        "tomasvotruba/class-leak": "^0.1.3",
-        "tomasvotruba/unused-public": "0.3.2.72"
+        "tomasvotruba/class-leak": "^0.1",
+        "tomasvotruba/unused-public": "^0.3"
     },
     "autoload": {
         "psr-4": {
