--- a/config/phpstan-data-collector.neon
+++ b/config/phpstan-data-collector.neon
@@ -1,6 +1,7 @@
 parameters:
     # avoid need of level
-    customRulesetUsed: true
+    # customRulesetUsed: true
+    level: 8
 
 services:
     -
