--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symplify/easy-coding-standard": "^12.0",
         "symplify/phpstan-extensions": "^11.3",
         "tomasvotruba/class-leak": "^0.1",
-        "tomasvotruba/unused-public": "^0.3"
+        "tomasvotruba/unused-public": "^0.3",
+        "tracy/tracy": "^2.10"
     },
     "autoload": {
         "psr-4": {
