make phpstan tests pass

--- a/config/phpstan-data-collector.neon
+++ b/config/phpstan-data-collector.neon
@@ -4,11 +4,9 @@ parameters:
 
 services:
     -
-        class: TomasVotruba\SherlockTypes\PHPStan\Rule\DumpPHPUnitAssertTypesRule
-        tags:
-            - phpstan.rules.rule
-
-    -
         class: TomasVotruba\SherlockTypes\PHPStan\Collectors\PHPUnitAssertMethodCallCollector
         tags:
             - phpstan.collector
+
+rules:
+    - TomasVotruba\SherlockTypes\PHPStan\Rule\DumpPHPUnitAssertTypesRule
