--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,38 @@
 {
-    "name": "tomasvotruba/sherlock-types",
-    "description": "Deduce types like Sherlock Holmes with PHPStan and fill them with Rector",
-    "license": "MIT",
+    "name": "rector/argtyper",
+    "description": "Analyze real method argument types, and add them as type declarations",
+    "license": "proprietary",
     "bin": [
-        "bin/sherlock-types.php"
+        "bin/argtyper.php",
+        "bin/argtyper"
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/container": "^10.20",
+        "php": "^8.2",
+        "illuminate/container": "^12.32",
         "nette/utils": "^4.0",
-        "phpstan/phpstan": "^1.10.32",
+        "phpstan/phpstan": "^2.1",
         "symfony/console": "^6.3",
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpstan/extension-installer": "^1.3",
-        "phpunit/phpunit": "^10.3",
-        "rector/rector": "^0.18.0",
-        "symplify/easy-coding-standard": "^12.0",
-        "symplify/phpstan-extensions": "^11.3",
-        "tomasvotruba/class-leak": "^0.1",
-        "tomasvotruba/unused-public": "^0.3",
+        "phpunit/phpunit": "^11.3",
+        "rector/rector": "^2.0",
+        "phpecs/phpecs": "^2.1",
+        "symplify/phpstan-extensions": "^12.0",
+        "tomasvotruba/class-leak": "^2.0",
+        "tomasvotruba/unused-public": "^2.0",
         "tracy/tracy": "^2.10"
     },
     "autoload": {
         "psr-4": {
-            "TomasVotruba\\SherlockTypes\\": "src"
+            "Rector\\ArgTyper\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "TomasVotruba\\SherlockTypes\\Tests\\": "tests"
+            "Rector\\ArgTyper\\Tests\\": "tests"
         },
         "files": [
             "tests/functions.php"
