--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,7 +10,7 @@ parameters:
         - '#Calling PHPStan\\(.*?) is not covered by backward compatibility promise\. The method might change in a minor PHPStan version#'
 
         # collector superfluous generics
-        - '#Method TomasVotruba\\SherlockTypes\\Tests\\PHPStan\\ResultInfererTest\:\:getCollectors\(\) return type with generic interface PHPStan\\Collectors\\Collector does not specify its types\: TNodeType, TValue#'
+        - '#Method Rector\\ArgTyper\\Tests\\PHPStan\\ResultInfererTest\:\:getCollectors\(\) return type with generic interface PHPStan\\Collectors\\Collector does not specify its types\: TNodeType, TValue#'
 
         - '#Offset (.*?) does not exist on array<string, mixed>\|null#'
 
