--- a/.github/workflows/bare_run.yaml
+++ b/.github/workflows/bare_run.yaml
@@ -2,8 +2,6 @@ name: Bare Run on various PHP versions
 
 on:
     push:
-        tags:
-            - '*.72'
 
 jobs:
     bare_run:
@@ -12,7 +10,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php_version: ['7.2', '7.3', '7.4', '8.0']
+                php_version: ['7.2', '8.0', '8.4']
 
         steps:
             -   uses: actions/checkout@v2
@@ -23,4 +21,4 @@ jobs:
                     php-version: ${{ matrix.php_version }}
                     coverage: none
 
-            -   run: php bin/sherlock-types list --ansi
+            -   run: php bin/argtyper list --ansi
