--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,13 +8,22 @@ parameters:
     reportUnmatchedIgnoredErrors: false
 
     ignoreErrors:
-        # phsptan BC
+        # irelevant
         - '#Calling PHPStan\\(.*?) is not covered by backward compatibility promise\. The method might change in a minor PHPStan version#'
+        - identifier: phpstanApi.constructor
 
         # collector superfluous generics
         - '#Method Rector\\ArgTyper\\Tests\\PHPStan\\ResultInfererTest\:\:getCollectors\(\) return type with generic interface PHPStan\\Collectors\\Collector does not specify its types\: TNodeType, TValue#'
 
         - identifier: phpstanApi.instanceofType
+
+        # false positive
+        - '#with generic interface PHPStan\\Collectors\\Collector#'
+
+        # possibly requires fix
+        -
+            message: '#Binary operation "." between array{string, string, string, string} and array{string, string, string, string} results in an error#'
+            path: src/PHPStan/Rule/DumpMethodCallArgTypesRule.php
 
     excludePaths:
         - "*/Fixture/*"
