--- a/.github/workflows/downgraded_release.yaml
+++ b/.github/workflows/downgraded_release.yaml
@@ -15,7 +15,7 @@ jobs:
         steps:
             -   uses: "actions/checkout@v3"
                 with:
-                    token: ${{ secrets.ACCESS_TOKEN }}
+                    token: ${{ secrets.WORKFLOWS_TOKEN }}
 
             -
                 uses: "shivammathur/setup-php@v2"
