--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
     "require": {
         "php": "^8.2",
         "nette/utils": "^4.0",
+        "rector/rector": "^2.2",
         "phpstan/phpstan": "^2.1",
+        "symfony/finder": "^7.3",
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.4",
         "phpstan/extension-installer": "^1.4",
         "phpunit/phpunit": "^11.5",
-        "rector/rector": "^2.2",
         "phpecs/phpecs": "^2.2",
         "symplify/phpstan-extensions": "^12.0",
         "tomasvotruba/class-leak": "^2.0",
