--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     ],
     "require": {
         "php": "^8.2",
+        "illuminate/container": "^12.34",
         "nette/utils": "^4.0",
-        "rector/rector": "^2.2",
         "phpstan/phpstan": "^2.1",
+        "rector/rector": "^2.2",
+        "symfony/console": "^7.3",
         "symfony/finder": "^7.3",
         "webmozart/assert": "^1.11"
     },
