--- a/.github/workflows/code_analysis.yaml
+++ b/.github/workflows/code_analysis.yaml
@@ -38,7 +38,7 @@ jobs:
 
                     -
                         name: 'Check Active Classes'
-                        run: vendor/bin/class-leak check src bin --ansi
+                        run: vendor/bin/class-leak check src bin tests --ansi --skip-path=Fixture --skip-path=Source
 
         name: ${{ matrix.actions.name }}
         runs-on: ubuntu-latest
