--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "rector/rector": "^2.2",
         "symfony/console": "^7.3",
         "symfony/finder": "^7.3",
+        "symfony/process": "^7.3",
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
