reword to jsonl

--- a/phpstan-data-collector.neon
+++ b/phpstan-data-collector.neon
@@ -14,5 +14,7 @@ services:
             - phpstan.collector
 
 rules:
-    - Rector\ArgTyper\PHPStan\Rule\DumpCallLikeArgTypesRule
     - Rector\ArgTyper\PHPStan\Rule\DumpFuncCallArgTypesRule
+
+    # reworked simper versions
+    - Rector\ArgTyper\PHPStan\Rule\CollectCallLikeArgTypesRule
