--- a/.github/workflows/downgraded_release.yaml
+++ b/.github/workflows/downgraded_release.yaml
@@ -31,7 +31,7 @@ jobs:
             -   run: composer require rector/rector --working-dir rector-local --ansi
 
             # downgrade to PHP 7.2
-            -   run: rector-local/vendor/bin/rector process src bin vendor --config build/rector-downgrade-php-72.php --ansi
+            -   run: rector-local/vendor/bin/rector process rector-argtyper.php src bin vendor --config build/rector-downgrade-php-72.php --ansi
 
             # clear the dev files
             -   run: rm -rf tests ecs.php phpstan.neon phpunit.xml .gitignore .editorconfig
@@ -43,7 +43,7 @@ jobs:
             -   run: cp -r build/target-repository/. .
 
             # clear the dev files
-            -   run: rm -rf build prefix-code.sh full-tool-build.sh scoper.php rector.php rector-local php-scoper.phar
+            -   run: rm -rf build prefix-code.sh scoper.php rector.php rector-local php-scoper.phar
 
             # setup git user
             -
