--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     ],
     "require": {
         "php": "^8.2",
+        "illuminate/container": "^12.39",
         "phpstan/phpstan": "^2.1",
         "rector/rector": "^2.2",
         "symfony/console": "^6.4",
         "symfony/finder": "^7.3",
         "symfony/process": "^7.3",
-        "webmozart/assert": "^1.11"
+        "webmozart/assert": "^1.12"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.4",
