--- a/.github/workflows/run_on_project.yaml
+++ b/.github/workflows/run_on_project.yaml
@@ -21,7 +21,7 @@ jobs:
                     php-version: ${{ matrix.php_version }}
                     coverage: none
 
-            -   run: composer require rector/argtyper
+            -   run: composer require rector/argtyper --ansi
             -   run: composer create-project laravel/framework
 
             # on whole project, to be able to load vendor/autoload.php
