--- a/.github/workflows/run_on_project.yaml
+++ b/.github/workflows/run_on_project.yaml
@@ -25,7 +25,7 @@ jobs:
             -   run: composer require rector/argtyper --ansi
 
             # clone laravel project with dependencies
-            -   run: git clone git@github.com:laravel/framework.git --depth=1
+            -   run: git clone https://github.com/laravel/framework.git --depth=1
             -   run: composer install --working-dir framework
 
             # on whole project, to be able to load vendor/autoload.php
