--- a/.github/workflows/code_analysis.yaml
+++ b/.github/workflows/code_analysis.yaml
@@ -37,6 +37,10 @@ jobs:
                         run: vendor/bin/parallel-lint src tests
 
                     -
+                        name: 'Dependency Analysis'
+                        run: vendor/bin/composer-dependency-analyser
+
+                    -
                         name: 'Check Active Classes'
                         run: vendor/bin/class-leak check src bin tests --ansi --skip-path=Fixture --skip-path=Source
 
