--- a/config/phpstan-collecting-data.neon
+++ b/config/phpstan-collecting-data.neon
@@ -5,6 +5,10 @@ parameters:
     bootstrapFiles:
         - bin/autoload.php
 
+    excludePaths:
+        - "*/Fixture/*"
+        - "*/Fixtures/*"
+
 rules:
     - Rector\ArgTyper\PHPStan\Rule\CollectFuncCallArgTypesRule
     - Rector\ArgTyper\PHPStan\Rule\CollectCallLikeArgTypesRule
