--- a/config/phpstan-collecting-data.neon
+++ b/config/phpstan-collecting-data.neon
@@ -3,7 +3,7 @@ parameters:
     customRulesetUsed: true
 
     bootstrapFiles:
-        - bin/autoload.php
+        - ../bin/autoload.php
 
     excludePaths:
         - "*/Fixture/*"
