--- a/.github/workflows/code_analysis.yaml
+++ b/.github/workflows/code_analysis.yaml
@@ -29,6 +29,10 @@ jobs:
                         run: composer fix-cs --ansi
 
                     -
+                        name: 'Class Leak'
+                        run: vendor/bin/class-leak check src tests --skip-path=Fixture --skip-path=Source
+
+                    -
                         name: 'Tests'
                         run: vendor/bin/phpunit
 
@@ -59,3 +63,4 @@ jobs:
             -   uses: "ramsey/composer-install@v2"
 
             -   run: ${{ matrix.actions.run }}
+
