--- a/.github/workflows/run_on_project.yaml
+++ b/.github/workflows/run_on_project.yaml
@@ -29,4 +29,4 @@ jobs:
             -   run: composer install --working-dir framework --ansi
 
             # on whole project, to be able to load vendor/autoload.php
-            -   run: vendor/bin/argtyper add-types framework
+            -   run: vendor/bin/argtyper add-types framework --ansi
