fixup! fixup! fixup! move temp data to temp

--- a/config/phpstan-collecting-data.neon
+++ b/config/phpstan-collecting-data.neon
@@ -2,6 +2,9 @@ parameters:
     # avoid any other rules
     customRulesetUsed: true
 
+    # avoid inline-ignores to be reported
+    reportUnmatchedIgnoredErrors: false
+
     excludePaths:
         - "*/Fixture/*"
         - "*/Fixtures/*"
